# blades-server-rewritten

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.arena.yml
arena_proto/: Cargo.toml
arena_proto/src/: crypto.rs  enet.rs  lib.rs  netdata.rs  opcodes.rs  reassembly.rs
binary_analysis/: .gitignore  enet.md
binary_analysis/ghidra_script/: transform_flow_override.java
blades_lib/src/: lib.rs
build-app/: patch_for_frida.sh
build-app/nix-workaround/: aapt  zipalign
deploy/: README-arena-deploy.md  arena.env.example  arena.sh  rms-smoke-test.py
deploy/static/: abyss.json  announcements.json  challenges.json  chest_loots.json  daily_rewards.json  default_town.json  game_events.json  gifts.json  global_shop_grants.json  global_shop_overrides.json  iap.json  item_mod_recipes.json  parsed.json  quest_rewards.json  recipes.json  salvage_recipes.json  shop_bundles.json  shops.json
docs/: arena-cooldowns-authoritative.md  non-arena-feature-gaps.md
libenet/: Cargo.toml
libenet/src/: definitions.rs  error.rs  lib.rs  packet_decoder.rs
match-server/: Cargo.toml
migrations/2026-05-01-084637-0000_create_matchmaking/: down.sql  up.sql
migrations/2026-06-08-120000-0000_add_device_bindings/: down.sql  up.sql
migrations/2026-06-16-000000-0000_add_arena_matches/: down.sql  up.sql
migrations/2026-06-16-120000-0000_add_sessions/: up.sql
migrations/2026-06-18-000000-0000_add_town_to_characters/: down.sql  up.sql
script/: extract_parsed_json.py  extract_static_data.py
server/: Cargo.toml
server/src/: abyss.rs  admin.rs  (+25 more)
(+46 files in other folders)
